@@ -43,6 +43,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20245: The open functions in the tarfile module now correctly handle
+  empty mode.
+
 - Issue #20242: Fixed basicConfig() format strings for the alternative
   formatting styles. Thanks to kespindler for the bug report and patch.
 
